# sdk-platform-java

./: #sudo su && README.md  .bazeliskrc  .bazelrc  .gitignore  .release-please-manifest.json  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  GEMINI.md  PROPERTIES.bzl  README.md  WORKSPACE  ad-hoc-compile-proto-files.sh  allclasses-frame.html  allclasses-noframe.html  codecov.yml  constant-values.html  dependencies.properties  dependencies.txt  deprecated-list.html  file.txt  gapic_generator_java.bzl  generation_config.yaml  go.work  help-doc.html  index-all.html  index.html  logging.properties  output.txt  output_logs.txt  overview-summary.html  overview-tree.html  package-list  pom.xml  release-please-config.json  renovate.json  repositories.bzl  repository_rules.bzl  run.sh  (+3 more)
gapic-generator-java/: .gitignore  BUILD.bazel  CHANGELOG.md  DEVELOPMENT.md  README.md  WORKSPACE  dependencies.properties  generate_sdk_library.sh  pom.xml  repositories.bzl  run.sh
gapic-generator-java/.circleci/: config.yml
gapic-generator-java/.githooks/: pre-commit
gapic-generator-java/.github/: CODEOWNERS  release-please.yml
gapic-generator-java/.github/workflows/: ci-maven.yaml  ci.yaml  sonar.yaml
gapic-generator-java/.kokoro/release/: common.cfg
gapic-generator-java/gapic-generator-java/: .bazelrc  .gitignore  pom.xml  repositories.bzl
gapic-generator-java/gapic-generator-java/.githooks/: pre-commit
gapic-generator-java/gapic-generator-java/.github/workflows/: ci.yaml
gapic-generator-java/gapic-generator-java/rules_java_gapic/: BUILD.bazel
gapic-generator-java/library-generation/: gapic-generator-java-wrapper  generate_library.sh  out  util.sh
gapic-generator-java/rules_bazel/java/: java_diff_test.bzl
gapic-generator-java/rules_java_gapic/: BUILD.bazel  java_gapic.bzl  java_gapic_pkg.bzl
gapic-generator-java/rules_java_gapic/resources/gradle/: client_grpc.gradle.tmpl  client_grpcrest.gradle.tmpl  client_rest.gradle.tmpl  proto.gradle.tmpl
gapic-generator-java/scripts/: diff_gen_and_golden.sh  update_golden.sh
gapic-generator-java/src/main/proto/: spanner_options_config.proto
gapic-generator-java/src/main/resources/: customization.yaml
gapic-generator-java/src/test/proto/: api_version_testing.proto  bigquery_jobs.proto  collisions.proto  echo.proto  echo_grpcrest.proto  explicit_dynamic_routing_header_testing.proto  http_rule_parser_testing.proto  identity.proto  naming.proto  resource_name_testing.proto  selective_api_generation.proto  service_with_no_methods.proto  spanner.proto  type_conflict_testing.proto
gapic-generator-java/src/test/resources/: bigquery_v2.yaml  customization_test.yaml  echo_mixins_in_apis_not_in_http_v1beta1.yaml  echo_mixins_not_in_apis_in_http_v1beta1.yaml  echo_mixins_not_in_apis_not_in_http_v1beta1.yaml  echo_v1beta1.yaml  naming_grpc_service_config.json  selective_api_generation.yaml  selective_api_generation_generate_omitted_v1beta1.yaml  selective_api_generation_grpc_service_config.json  selective_api_generation_no_java.yaml  selective_api_generation_no_java_settings_v1beta1.yaml  selective_api_generation_no_publishing_v1beta1.yaml  selective_api_generation_v1beta1.yaml  showcase_v1beta1.yaml  spanner_gapic.yaml  spanner_grpc_service_config.json
gapic-generator-java/test/integration/: BUILD.bazel
rules_java_gapic/: BUILD.bazel  java_gapic.bzl  java_gapic_pkg.bzl  java_gapic_spring.bzl
rules_java_gapic/resources/gradle/: assembly.gradle.tmpl  client_grpc.gradle.tmpl  client_grpcrest.gradle.tmpl  client_rest.gradle.tmpl  grpc.gradle.tmpl  proto.gradle.tmpl  settings.gradle.tmpl
showcase/: .OwlBot-hermetic.yaml  .repo-metadata.json  BUILD.bazel  README.md  otel-col-config.yaml  pom.xml
showcase/gapic-showcase/: pom.xml
showcase/gapic-showcase-extended/proto/: BUILD.bazel  collisions.proto  wicked.proto
showcase/google-cloud-jar-parent/: pom.xml
showcase/google-cloud-pom-parent/: pom.xml
showcase/grpc-gapic-showcase-v1beta1/: pom.xml
showcase/opentelemetry-helper/configs/: testGrpc_OperationCancelled.yaml  testGrpc_OperationFailed.yaml  testGrpc_OperationSucceeded.yaml  testGrpc_attemptFailedRetriesExhausted.yaml  testGrpc_attemptPermanentFailure.yaml  testHttpJson_OperationCancelled.yaml  testHttpJson_OperationFailed.yaml  testHttpJson_OperationSucceded.yaml  testHttpJson_OperationSucceeded.yaml  testHttpjson_attemptFailedRetriesExhausted.yaml  testHttpjson_attemptPermanentFailure.yaml
showcase/proto-gapic-showcase-v1beta1/: pom.xml
showcase/scripts/: .gitignore  2  BUILD.bazel  cleanup_otelcol.sh  generate_component.sh  generate_components.sh  generate_otelcol_yaml.sh  generate_showcase.sh  out  showcase_utilities.sh  start_otelcol.sh  update.sh  verify.sh  verify_metrics.sh
showcase/scripts/resources/: BUILD.partial.bazel
test/integration/: BUILD.bazel
test/integration/goldens/: README.md
test/integration/goldens/asset/: AssetServiceClient.java  AssetServiceClientTest.java  AssetServiceSettings.java  AssetServiceStub.java  AssetServiceStubSettings.java  BUILD.bazel  FeedName.java  GrpcAssetServiceCallableFactory.java  GrpcAssetServiceStub.java  MockAssetService.java  MockAssetServiceImpl.java  package-info.java
test/integration/goldens/credentials/: IamCredentialsClient.java  IamCredentialsSettings.java  IamCredentialsStubSettings.java
test/integration/goldens/iam/: GrpcIAMPolicyCallableFactory.java  GrpcIAMPolicyStub.java  IAMPolicyClient.java  IAMPolicyClientTest.java  IAMPolicySettings.java  IAMPolicyStub.java  IAMPolicyStubSettings.java  MockIAMPolicy.java  MockIAMPolicyImpl.java
test/integration/goldens/kms/: CryptoKeyName.java  CryptoKeyVersionName.java  GrpcKeyManagementServiceCallableFactory.java  GrpcKeyManagementServiceStub.java  KeyManagementServiceClient.java  KeyManagementServiceClientTest.java  KeyManagementServiceSettings.java  KeyManagementServiceStub.java  KeyManagementServiceStubSettings.java  LocationName.java  MockKeyManagementService.java  MockLocationsImpl.java  (+1 more)
test/showcase/: BUILD.bazel
test/showcase/test/: BUILD.bazel  FirstHttpIT.java  FirstRpcIT.java
(+5226 files in other folders)
